v2 | bug fixes + disable download btn while download in progress + VoskModelDialog size update + add option to delete old vosk model extract dir